Todo, draw and push
I updated "Todo" with new targets. I added draw and push for all of my classes, so now I just need to solve problem with inicialization objects in "loop" and change x in Ball::tr().

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,5 +1,16 @@
-1. Найти в библиотеках их полное описание.
-2. Разобраться с примером, отконспектировать в файле.
-3. Решить вопрос с координатной сеткой.
-4. Решить, как реализовать draw();
-5. Решить, как реализовать push();
+1. Найти в библиотеках их полное описание.               + в хедере
+2. Разобраться с примером, отконспектировать в файле.    + очевидно
+3. Решить вопрос с координатной сеткой.                  + вопрос закрыт
+4. Решить, как реализовать draw();                       + через UFTF p 
+5. Решить, как реализовать push();                       - ситуативно для каждого объекта
+(вспомнить про виртуальные функции)
+6. Первая часть + вывести мяч, поле, платформу, вражескую платформу.
+7. Вторая часть - реализовать move() для MyPlatform.
+8. Третья часть - самое сложное - реализовать move() для EnemyPlatform и tr() для Ball.
+Это до вторника. Дальше - сахарок.
+
+По сути два глобальных вопроса.
+Как сделать объявление объекта вне loop;
+Как реализовать изменения по y.
+
+Решив эти два вопроса, игра сделана.
