--- a/Todo.txt
+++ b/Todo.txt
@@ -10,7 +10,27 @@
 Это до вторника. Дальше - сахарок.
 
 По сути два глобальных вопроса.
-Как сделать объявление объекта вне loop;
-Как реализовать изменения по y.
+Как сделать объявление объекта вне loop; +
+Как реализовать изменения по y. - Пока что константно.
 
 Решив эти два вопроса, игра сделана.
+
+Ровно сейчас мне надо сделать:
+1) Конструкторы для четырех классов. +
+2) Разделение поля на две части.
+3) Запрет передвигаться платформе за половину экрана.
+4) Отсутсвие мигания при отсутствии изменения - сначала в черный, потом изменять.
+5) Движение шарика по х.
+
+Все, что осталось теперь:
+1) Решить проблему с движением вражеской платформы.
+2) Оформить движение шарика.
+
+Игра почти готова, думаю, на зачет уже примут.
+Но до нормального состояния надо допилить.
+1. Вывод очков на экран.
+2. Окончание игры при более 6 побед.
+3. Сделать так, чтобы мяч реаигровал на края моей платформы по y.
+4. Сделать так, чтобы мяч реаигровал на края платформы по x снизу.
+5. Сделать регулировку по пальцу.
+gg
