--- a/Todo.txt
+++ b/Todo.txt
@@ -28,9 +28,10 @@
 
 Игра почти готова, думаю, на зачет уже примут.
 Но до нормального состояния надо допилить.
-1. Вывод очков на экран.
-2. Окончание игры при более 6 побед.
-3. Сделать так, чтобы мяч реаигровал на края моей платформы по y.
-4. Сделать так, чтобы мяч реаигровал на края платформы по x снизу.
-5. Сделать регулировку по пальцу.
+1. Вывод очков на экран. +
+2. Окончание игры при более 6 побед. +
+3. Сделать так, чтобы мяч реаигровал на края моей платформы по y. +
+4. Сделать так, чтобы мяч реаигровал на края платформы по x снизу. +
+5. Сделать регулировку по пальцу. +
+6. Реализовать более адекватное движение моей платформы с запоминанием предыдущего местоположения.
 gg
